bitfields/tests/compile_error_cases/errors/bitfield_field_defined_bits_0.stderr
error: The field bits must be greater than 0.
 --> tests/compile_error_cases/errors/bitfield_field_defined_bits_0.rs:5:12
  |
5 |     #[bits(0)]
  |            ^
